cicd/backend-deploy.yaml
# Django Backend DeploymentapiVersion: apps/v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: backend-ns
  labels:
    app: back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: django-backend
        image: seonxx/django-container:latest
        ports:
        - containerPort: 8000
