cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend-ns
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: front
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend-ns
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: back
