cicd/TravelLog-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend-ns
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.travellog.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
    - host: backend.travellog.io
      http:
        paths:
          - path: /travel
            pathType: Prefix
            backend:
              service:
                name: backend-svc-proxy
                port:
                  number: 8000
